# estate_chatbot

./: Dockerfile  Dockerfile.dev  app.py  docker-compose.dev.yml  docker-compose.yml  loader.py  pyproject.toml
admin/: models.py
data/: admins.txt  chats.txt  codes.txt  delete_codes.txt
filters/: group.py
handlers/group/: group_start.py
handlers/private/: start.py
src/: app.py  loader.py
src/admin/: create_admin.py  models.py  resources.py  start.py
src/bot_admin/: config.py
src/data/: chats.txt  codes.txt
src/filters/: group.py  requirements.py
src/handlers/group/: group_start.py
src/handlers/private/: start.py
src/keyboards/: reply.py
src/utils/: private_utils.py
states/: code_state.py
utils/: private_utils.py
